--- a/src/resources/generator_data/code/C/templates/template_dlsym_interface.jinja
+++ b/src/resources/generator_data/code/C/templates/template_dlsym_interface.jinja
@@ -42,7 +42,7 @@ exit(1);
     }
     if(!interface_handle)
     {
-    	printf("Dlopen failed to open WI4MPI librarie.\nerror :%s\n",dlerror());
+    	printf("Dlopen failed to open WI4MPI library.\nerror: %s\n",dlerror());
     	exit(1);
     }
 {% for func in funcs %} 
