Only free r-array of statuses if not ignore

--- a/src/resources/generator_data/code/fortran/templates/in_functions.jinja
+++ b/src/resources/generator_data/code/fortran/templates/in_functions.jinja
@@ -52,7 +52,9 @@
         {%  if map['no_map']|default("") == "" -%}
         {%- if 'status_size' in map -%}
             {%- if 'arg_dep' in arg and arg['arg_dep'] != '' -%}
-                wi4mpi_free({{var}}_tmp);
+                if ({{var}} != A_f_MPI_STATUSES_IGNORE) {
+                    wi4mpi_free({{var}}_tmp);
+                }
             {%- endif -%}
         {%- else -%}
             {%- if 'arg_dep' in arg and arg['arg_dep']!='' -%}
