--- a/src/resources/generator_data/code/C/templates/in_functions.jinja
+++ b/src/resources/generator_data/code/C/templates/in_functions.jinja
@@ -45,7 +45,9 @@
             {%-  if arg['arg_dep']|default("") != "" -%} 
                 {%- if map['max_mpi']|default("") == "" or map['type']!='char *' %}
                 {%-  if map['type'] == 'MPI_Status'-%} 
-                    wi4mpi_free(array_of_statuses_tmp);
+                    if (array_of_statuses != A_MPI_STATUSES_IGNORE) {
+                        wi4mpi_free(array_of_statuses_tmp);
+                    }
                 {%-  else-%}  
                     wi4mpi_free({{var|replace('[]','')}}_tmp);
                 {%-  endif-%} 
