--- a/src/resources/generator_data/code/C/templates/template_A.jinja
+++ b/src/resources/generator_data/code/C/templates/template_A.jinja
@@ -87,10 +87,16 @@
   int wi4mpi_rank;
   R_MPI_Comm_rank(R_MPI_COMM_WORLD, &wi4mpi_rank);
   if (wi4mpi_rank == 0)
+#if  defined(_MPC) || defined(_OMPI) || defined(_INTEL)
+    fprintf(
+        stdout, "You are using Wi4MPI-%s in the interface mode to %s\n",
+        getenv("WI4MPI_VERSION"), getenv("WI4MPI_TO"));
+#else
     fprintf(
         stdout, "You are using Wi4MPI-%s in the preload mode from %s to %s\n",
         getenv("WI4MPI_VERSION"), getenv("WI4MPI_FROM"), getenv("WI4MPI_TO"));
-    {%- endif -%}
+#endif
+    {% endif %}
     in_w=0;
     {# the code used in debug_printer to build parameters is wrong but lets as it is while the work on the generator is not done, to avoid modifing the generated code: we take into account arg_dep in the arguments to print but not in the control string construction code #}
     #ifdef DEBUG
